<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SkinSwitch - strings.xml
  ~ Copyright (C) 2014-2014  Baptiste Candellier
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

	<string name="app_name" translatable="false">SkinSwitch</string>
	<string name="action_settings">Help</string>
	<string name="action_add">Add</string>
	<string name="action_login">Log in</string>
	<string name="action_logout">Log out</string>
	<string name="dialog_logout_title">Log out?</string>
	<string name="add_skin_dialog_title">Add a new skin</string>

	<string name="image_skin_front">Skin Front</string>
	<string name="image_skin_back">Skin Back</string>
	<string name="image_upload_skin">Wear this skin</string>
	<string name="image_delete">Delete skin</string>

	<string name="action_next">Next</string>
	<string name="action_refresh">Refresh</string>
	<string name="action_edit">Edit</string>
	<string name="action_share">Share</string>
	<string name="action_search">Search</string>

	<string name="success_skin_upload">Skin uploaded successfully!</string>
	<string name="error_skin_download">Could not download this skin: %1$s</string>

	<string name="success_skin_added">Skin added successfully!</string>
	<string name="success_skin_updated">Skin updated successfully!</string>

	<string name="replace_skin_title">Replace with %1$s?</string>
	<string name="replace_skin_message">Do you really want to replace your current Minecraft skin with %1$s?</string>

	<string name="delete_skin_title">Delete %1$s?</string>
	<string name="delete_skin_message">Do you really want to delete %1$s from your library?</string>

	<string name="share_message">Check out %1$s, a cool Minecraft skin! %2$s (via #SkinSwitch)</string>
	<string name="logged_out">Logged out.</string>

	<string name="skin_details_title">Skin Details</string>
	<string name="add_skin_instructions">Add a new skin by tapping the <b>+</b> icon.</string>
	<string name="add_skin_title">Nothing here yet!</string>
	<string name="refresh_skin_title">Refresh this skin</string><string name="refresh_skin_message">Do you really want to refresh this skin? It will be downloaded again from the same source.
For example, if you added it from a user, if this user changed his skin, the new one will be downloaded.
This cannot be undone.</string>

</resources>