<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ SkinSwitch - skin_details.xml
  ~ Copyright (C) 2014-2014  Baptiste Candellier
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_edit_skin"
		android:title="@string/action_edit"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_delete_skin"
		android:title="@string/action_delete"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_refresh_skin"
		android:title="@string/action_refresh"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_share"
		android:title="@string/action_share"
		app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
		app:showAsAction="never" />

</menu>