<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SkinSwitch - activity_detail.xml
  ~ Copyright (C) 2014-2014  Baptiste Candellier
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView
	android:id="@+id/content"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="fr.outadev.skinswitch.skinlist.DetailActivity">

	<LinearLayout
		android:id="@+id/container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="390dp"
			android:background="@drawable/bg"
			android:paddingTop="@dimen/skin_details_topmargin">

			<FrameLayout
				android:layout_width="175dp"
				android:layout_height="325dp"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="25dp">

				<ImageView
					android:id="@+id/skin_preview_front"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:contentDescription="@string/image_skin_front" />

				<ImageView
					android:id="@+id/skin_preview_back"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:contentDescription="@string/image_skin_back"
					android:visibility="gone" />
			</FrameLayout>

			<FrameLayout
				android:id="@+id/b_upload_skin_container"
				android:layout_width="@dimen/floating_button_size"
				android:layout_height="@dimen/floating_button_size"
				android:layout_gravity="bottom|right"
				android:layout_marginBottom="16dp"
				android:layout_marginRight="16dp"
				android:background="@drawable/button_background"
				android:elevation="@dimen/button_elevation">

				<ImageButton
					android:id="@+id/b_upload_skin"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="@drawable/button_background"
					android:contentDescription="@string/image_upload_skin"
					android:src="@drawable/ic_action_done" />

				<FrameLayout
					android:id="@+id/b_loading"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="@drawable/button_background"
					android:padding="3dp"
					android:visibility="gone">

					<ProgressBar
						style="?android:attr/progressBarStyle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />
				</FrameLayout>

			</FrameLayout>


			<ImageButton
				android:id="@+id/b_delete"
				android:layout_width="@dimen/floating_button_size"
				android:layout_height="@dimen/floating_button_size"
				android:layout_gravity="bottom|left"
				android:layout_marginBottom="16dp"
				android:layout_marginLeft="16dp"
				android:background="@drawable/button_background"
				android:contentDescription="@string/image_delete"
				android:elevation="@dimen/button_elevation"
				android:src="@drawable/ic_action_delete" />

			<FrameLayout
				android:id="@+id/information_container"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="#FFFFFF"
				android:visibility="invisible">

			</FrameLayout>

		</FrameLayout>

		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="24dp"
			android:fontFamily="sans-serif-light"
			android:textSize="40sp" />

		<TextView
			android:id="@+id/description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="24dp"
			android:layout_marginLeft="24dp"
			android:layout_marginRight="24dp"
			android:lineSpacingMultiplier="1.2"
			android:textSize="20sp" />

	</LinearLayout>

</ScrollView>
